package com.shigu.main4.goat.beans;

import com.shigu.main4.goat.service.Goat;
import com.shigu.main4.goat.vo.ImgGoatVO;

/**
 * 图片类广告对象
 * Created by zhaohongbo on 17/5/4.
 */
public abstract class ImgGoat extends ImgGoatVO implements Goat{
}
