package com.shigu.main4.goat.beans;

import com.shigu.main4.goat.service.Goat;
import com.shigu.main4.goat.service.ItemResort;
import com.shigu.main4.goat.vo.ItemGoatVO;

/**
 * 商品类的广告对象
 * Created by zhaohongbo on 17/5/4.
 */
public abstract class ItemGoat extends ItemGoatVO implements Goat,ItemResort{
}
