package com.shigu.main4.goat.beans;

import com.shigu.main4.goat.service.Goat;
import com.shigu.main4.goat.vo.TextGoatVO;

/**
 * 文字形广告
 * Created by zhaohongbo on 17/5/5.
 */
public abstract class TextGoat extends TextGoatVO implements Goat{
}
